<resources>
    <string name="app_name">Chat Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="email">Email</string>
    <string name="gender">gender</string>
    <string name="refresh">REFRESH</string>
    <string-array name="spinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="checkBox">Accept Notifications</string>
    <string name="myFriend">My Friend</string>
    <string name="logOut">LOG OUT</string>
    <string name="Send">SEND</string>
    <string name="messageText">message text</string>
    <string name="messageSent">Message is sent!</string>
    <string name="messageDeleted">Message is deleted!</string>
    <string name="birthDate">Birth date:</string>


    <string name="contact1">Josie Enyeart</string>
    <string name="contact2">Mario Gartrell</string>
    <string name="contact3">Rachel Kuester</string>
    <string name="contact4">Stacia Gilmour</string>
    <string name="contact5">Robbie Stam</string>


    <string name="message1">Hey!!!</string>
    <string name="message2">Hello how are you?</string>
    <string name="message3">I am fine thanks, whats up?</string>
    <string name="message4">Long time no see</string>
    <string name="message5">Nothiing special, will i see you tonight?</string>
    <string name="message6">Sure meet me at 8</string>
    <string name="message7">Fine, see you</string>

    <string name="existingUsername">Username already exist!</string>
    <string name="usernameDosentExist">There is no such user! </string>

    <string name="userRegistration">User registered!</string>

    <string name="CONFLICT">There are some problems on login!</string>

    <string name="clickForMessage">Click for message!</string>
    <string name="noNewMessages">There are no new messages!</string>
    <string name="newMessages">There are new messages!</string>
</resources>
